--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/felipebernardes/betterheaders#readme",
   "devDependencies": {
     "bower": "^1.6.9",
+    "browser-sync": "^2.11.1",
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0"
